bad/assign_field_class_fcall_class_down.example_compiler_output
ERROR
[1mbad/assign_field_class_fcall_class_down.lat:10:12: [1;31merror: [0;1massigning to `Y` from incompatible type `X`[m
	foo().fld = new X;
	          [1;32m^[m
